# discord-idle-status

./: Cargo.toml  README.md
src/: main.rs
