[package]
name = "discord-idle-status"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fork = "0.1.18"
discord-rpc-client = "0.3.0"

[patch.crates-io]
discord-rpc-client = { git = "https://github.com/JakeStanger/discord-rpc-client.rs" }